[package]
name = "ext2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[dependencies]
chrono = "0.4.22"
unix_mode = "0.1.2"
argparse = "0.2.2"
humansize = "1.1.1"
